# stringtemplate3

./: .gitignore  CHANGES  CHANGES.adoc  MANIFEST  MANIFEST.in  Makefile  README.adoc  TODO  changelists  changelists.done  done-cl.sh  list-new-cls.sh  next-cl.sh  pylintrc  pyproject.toml
docs/: attributes.adoc  change_log.adoc  description.txt  packaging_notes.adoc  usage.adoc
examples/: TestUsingStringTemplate.py  logging_config.yml
examples/html/: html.py
examples/html/templates/: menu.st  menuItem.st  page.st  page_index.st
examples/templates/: demo_auto_indent.stg
src/stringtemplate3/: Makefile  __init__.py  antlr.py  errors.py  grouploaders.py  groups.py  interfaces.py  templates.py  utils.py  writers.py
src/stringtemplate3/language/: ASTExpr.py  ActionEvaluator.py  ActionLexer.py  ActionParser.py  AngleBracketTemplateLexer.py  AngleBracketTemplateLexerTokenTypes.txt  CatIterator.py  ChunkToken.py  ConditionalExpr.py  DefaultTemplateLexer.py  Expr.py  FormalArgument.py  GroupLexer.py  GroupParser.py  InterfaceLexer.py  InterfaceParser.py  Makefile  NewlineRef.py  StringRef.py  StringTemplateAST.py  StringTemplateToken.py  TemplateParser.py  TemplateParserTokenTypes.txt  __init__.py  action.g  angle.bracket.template.g  eval.g  group.g  interface.g  openfiles.sh  template.g
test/: Makefile  TestExercisingStringTemplate.py  TestPortedStringTemplate.py  TestStringHelper.py  TestStringTemplate.py  TestStringTemplate_orig.py  TestUsingStringTemplate.py  testencoding.py  testutils.py
